--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,15 +1,15 @@
 {
-  "version": 1,
+  "version": 2,
   "builds": [
     {
-      "src": "./index.js",
+      "src": ".js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "@/"
+      "dest": "/"
     }
   ]
 }
